Add frontend-mvn-plugin to do npm install & build on mvn install

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,8 @@
   "description": "UI for the Kafka Java Vertx starter application",
   "main": "src/index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack"
   },
   "author": "",
   "license": "Apache-2.0"
