--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "test",
-    "build": "webpack"
+    "build": "ls"
   },
   "author": "",
   "license": "Apache-2.0"
