--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "license": "Apache-2.0",
   "private": true,
+  "sideEffects": [
+    ".scss"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ibm-messaging/kafka-java-vertx-starter.git"
