fix: enable webpack optimisation
Contributes to: #7

Signed-off-by: Jordan <jordan.tucker1@ibm.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -5,9 +5,7 @@
   "author": "",
   "license": "Apache-2.0",
   "private": true,
-  "sideEffects": [
-    ".scss"
-  ],
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ibm-messaging/kafka-java-vertx-starter.git"
