--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-    ["@babel/preset-env", {"modules": "amd"}],
+    ["@babel/preset-env", {"modules": false}],
     "@babel/preset-react"
   ]
 } 
