--- a/.github/workflows/ui-build-and-test.yml
+++ b/.github/workflows/ui-build-and-test.yml
@@ -1,4 +1,4 @@
-name: UI
+name: Node
 
 on: [pull_request]
 
@@ -14,15 +14,15 @@ jobs:
         with:
           node-version: 12.x
       - name: Install Dependencies
-        run: npm run install
+        run: cd ui && npm install
       - name: Build
-        run: npm run build
+        run: cd ui && npm run build
       - name: Caluclate bundle size
         uses: ./.github/actions/bundle
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Test
-        run: npm run test
+        run: cd ui && npm run test
       - name: Coverage report
         if: ${{ always() }}
         uses: ./.github/actions/coverage-report
