--- a/.github/workflows/ui-jobs.yml
+++ b/.github/workflows/ui-jobs.yml
@@ -28,3 +28,18 @@ jobs:
         uses: ./.github/actions/coverage-report
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  lint:
+    runs-on: ubuntu-latest
+    name: ESLint
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: Install Dependencies
+        run: cd ui && npm install
+      - name: Code lint
+        run: cd ui && npm run lint
