fix: add line length limit to commits
Contributes to: #11

Signed-off-by: Jordan <jordan.tucker1@ibm.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,11 @@
         "always",
         72
       ],
+      "body-max-line-length": [
+        2,
+        "always",
+        72
+      ],
       "footer-max-length": [
         2,
         "always",
