--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <kafka.version>2.3.0</kafka.version>
     <vertx.version>4.0.0-milestone5</vertx.version>
     <jackson-databind.version>2.10.2</jackson-databind.version>
+    <junit.version>5.6.1</junit.version>
+    <maven.surefire.version>3.0.0-M4</maven.surefire.version>
   </properties>
 
   <dependencyManagement>
@@ -23,6 +25,13 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -37,6 +46,10 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-kafka-client</artifactId>
     </dependency>
     <dependency>
@@ -47,6 +60,26 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-templ-thymeleaf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>2.2</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -64,6 +97,11 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.version}</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -109,6 +147,7 @@
               <nodeVersion>v12.17.0</nodeVersion>
               <npmVersion>6.14.4</npmVersion>
             </configuration>
+            <phase>install</phase>
           </execution>
           <execution>
             <id>npm run prebuild</id>
@@ -118,6 +157,7 @@
             <configuration>
               <arguments>run prebuild</arguments>
             </configuration>
+            <phase>install</phase>
           </execution>
         </executions>
       </plugin>
