--- a/ui/package.json
+++ b/ui/package.json
@@ -136,7 +136,6 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "ws": "^7.3.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
