fix: dependabot name in git lint, run tests on pom change
- update lint check to allow new dependabot
- run Java build/test on change of pom xml

Closes: #43

Signed-off-by: Matthew Chirgwin <chirmatt@uk.ibm.com>

--- a/.github/workflows/java-pr-jobs.yml
+++ b/.github/workflows/java-pr-jobs.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
     - 'src/**'
+    - 'pom.xml'
 
 jobs:
   build:
@@ -17,4 +18,6 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: mvn package
+        run: mvn compile
+      - name: Test
+        run: mvn test
