--- a/.github/actions/bundle/action.yml
+++ b/.github/actions/bundle/action.yml
@@ -1,12 +1,11 @@
-name: 'Bundle size'
-description: 'Check the size of the bundle'
+name: "Bundle size"
+description: "Check the size of the bundle"
 branding:
-  icon: 'minimize-2'  
-  color: 'yellow'
-inputs:
-  GITHUB_TOKEN:
-    description: 'Github token of the repository (automatically created by Github)'
-    required: true
+  icon: "minimize-2"
+  color: "yellow"
+outputs:
+  bundle_size:
+    description: "Bundle size of webpack build"
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "docker"
+  image: "Dockerfile"
