--- a/.github/actions/commenter/action.yml
+++ b/.github/actions/commenter/action.yml
@@ -1,6 +1,8 @@
 name: "Commenter"
 description: "Comment inputed text on issue/pull request"
 inputs:
+  GITHUB_TOKEN:
+    description: "Github action bot token"
   BUNDLE_SIZE:
     description: "Bundle size of webpack build"
   TEST_COVERAGE:
