--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,8 @@
     "storybook": "start-storybook",
     "build-storybook": "build-storybook -o .out",
     "lint": "eslint .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "e2e": "jest -c jest.config.e2e.js"
   },
   "husky": {
     "hooks": {
@@ -109,6 +110,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest-playwright": "^0.2.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
@@ -116,10 +118,12 @@
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jest-playwright-preset": "^0.2.3",
     "lint-staged": "^10.2.10",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.2.0",
     "npm-run-all": "^4.1.5",
+    "playwright": "^1.1.1",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.8",
