--- a/ui/package.json
+++ b/ui/package.json
@@ -16,11 +16,11 @@
     "build": "webpack --mode production",
     "mock-vertx": "node ./src/DevUtils/MockVertx",
     "test": "jest",
+    "test:e2e": "jest -c jest.config.e2e.js",
     "storybook": "start-storybook",
     "build-storybook": "build-storybook -o .out",
     "lint": "eslint .",
-    "prettier": "prettier --write .",
-    "e2e": "jest -c jest.config.e2e.js"
+    "prettier": "prettier --write ."
   },
   "husky": {
     "hooks": {
@@ -52,7 +52,7 @@
       "footer-max-length": [
         2,
         "always",
-        72
+        100
       ],
       "type-enum": [
         2,
@@ -92,6 +92,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-centered": "^5.3.19",
     "@storybook/addon-info": "^5.3.19",
@@ -124,6 +125,8 @@
     "mocha": "^7.2.0",
     "npm-run-all": "^4.1.5",
     "playwright": "^1.1.1",
+    "playwright-core": "^1.1.1",
+    "playwright-video": "^2.2.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.8",
