--- a/ui/package.json
+++ b/ui/package.json
@@ -132,6 +132,7 @@
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
+    "sinon": "^9.0.2",
     "storybook-readme": "^5.0.8",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
