--- a/ui/package.json
+++ b/ui/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "file-loader": "^6.0.0",
     "gherkin-jest": "^0.24.0",
     "html-webpack-plugin": "^4.3.0",
